Fri Apr 12 11:36:34 BST 2002  Olly Betts <olly@survex.com>

	* Removed unused and superfluous stuff.

Fri Apr 12 11:34:26 BST 2002  Olly Betts <olly@survex.com>

	* Removed remaining files from gui subdirectory.

Tue Apr  9 19:00:36 BST 2002  Richard Boulton <richard@tartarus.org>

	* msearch: Remove GTK and LIBGLADE cflags, which were unwanted and
	  causing problems for me.

Thu Dec 20 16:29:27 GMT 2001  Richard Boulton <richard@tartarus.org>

	* Remove querygui (moved to xapview in the applications module).
	  Remove gui directory tree, and update configure.in and
	  Makefile.am accordingly.

Mon Dec 10 10:00:11 GMT 2001  Olly Betts <olly@survex.com>

	* indexnasty: Index terms which start with a digit too.

Fri Dec 07 14:21:29 GMT 2001  Olly Betts <olly@survex.com>

	* Give raw (unstemmed) terms prefix 'R'.

Wed Dec 05 14:46:05 GMT 2001  Olly Betts <olly@survex.com>

	* indexnasty: parsing terms from text is now twice as fast.

Thu Nov 22 17:39:59 GMT 2001  Olly Betts <olly@survex.com>

	* querygui: fixed compiler warnings.

Thu Nov 22 17:33:46 GMT 2001  Olly Betts <olly@survex.com>

	* Added key support to indexnasty and tried to make it a bit less nasty
	  (it now compiles cleanly on GCC3.0).

	* Updated simpleexpand for recent OmQuery changes.

Wed Nov 14 11:30:45 GMT 2001  Olly Betts <olly@survex.com>

	* Fixed to work with revised OmQuery interface.

Wed Nov 14 11:24:33 GMT 2001  Olly Betts <olly@survex.com>

	* Fixed gui to compile on GCC3.0.

Mon Nov  5 12:38:56 GMT 2001 Richard Boulton <richard@tartarus.org>

	* Move omega into separate "applications" module.

Thu Nov  1 20:43:25 GMT 2001 Richard Boulton <richard@tartarus.org>

	* omega: Put template dir into a variable, defined at same place as
	  db_dir.  Make db_dir non-const, ready for making its value read
	  from a configuration file.  Change db_dir to database_dir.

	* Add very simple configuration file reading code: reads
	  ./omega.conf and if that isn't readable /etc/omega.conf, to get