@@ -1,8 +1,0 @@
-## Process this file with automake to produce Makefile.in
-
-INCLUDES = $(XAPIAN_CFLAGS)
-
-bin_PROGRAMS = msearch
-
-msearch_SOURCES = msearch.cc
-msearch_LDADD = @XAPIAN_LIBS@
